--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of curtailment is to allow users to create single- or two-arm binary outcome clinical trial designs that use a form of early stopping known as stochastic curtailment. Using stochastic curtailment can result in trial designs with a lower sample size on average, compared to typical trial designs or even multi-stage designs. The package contains functions that will search for designs that are suitable for your trial, and draw a diagram showing all points in the trial that a decision may be made to stop early.
+The goal of curtailment is to allow users to create single- or two-arm binary outcome clinical trial designs that use a form of early stopping known as stochastic curtailment. Using stochastic curtailment can result in trial designs with a lower sample size on average, compared to typical trial designs or even multi-stage designs. The package contains functions that will search for designs that are suitable for your trial, and draw a diagram showing all points in the trial that a decision may be made to stop early. The package can also find two-stage designs that stop for futility only (Simon designs) or for benefit or futility (Mander and Thompson designs). For all designs, a maximum conditional power for futility can be specified, above which a trial would not be permitted to stop early for futility.
 
 ## Installation
 
