--- a/README.Rmd
+++ b/README.Rmd
@@ -76,11 +76,12 @@ fig <- drawDiagram(output)
  - make some returned output invisible
  - Fix bug: findSCdesigns and findNSCdesigns won't print plots
  - Make alias of find2stagedesigns to make clear it can obtain Simon designs
+ - Write meaningful error messages when nmin=0 or 1.
+ - Add qLo, qHi?
+ - Hide unnecessary output
+ - Improve output to make it look more like ph2simon
  
-## To Report
 
- - Now using `plot` for singlearmDesign and find2stagedesigns (remaining designs to follow, then drawDiagram may become deprecated)
- - "Breaking" updates to argument names nmin, nmax -- now n.max. 
  
 
 
